Fix/ User moderation tab and profile page (#2713)
* chore: update dependencies and improve styles

- Bump jest version from 29.7.0 to 30.3.0 in package.json for better testing features.
- Modify global styles to ensure consistent scrollbar behavior across browsers by setting overflow-y to scroll and width to 100%.
- Change mock implementation of ClientForumDate in SourceGroupedNoteList.test.js from a span to a list item for better semantic HTML.

* Fix: adjust layout styles and import order in RootLayout

* Fix: update page header selector in profile and redbutton tests

* some changes based on feedback

* use bootstrap trash icon

* update unblock logic

* Refactor profile components and styles; integrate legacy bootstrap styles

* revert debugging changes

* missing changes

* replace messages with past states

---------

--- a/styles/components/ProfileTag.module.scss
+++ b/styles/components/ProfileTag.module.scss
@@ -46,8 +46,6 @@
   color: white;
 }
 
-:global(.service-roles-container) {
-  .serviceRole {
-    border: none;
-  }
+.borderless {
+  border: none;
 }
